--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -102,7 +102,7 @@
     </div>
 </ng-template>
 
-<!-- Modal for Exclude Users -->
+<!-- Modal for Include Users -->
 <ng-template #includeUsers>
     <div class="modal-header">
         <h4 class="modal-title pull-left">INCLUDE USERS FOR STORY GROUP(S)</h4>
