--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -30,8 +30,9 @@
                     <i class="fas fa-pencil-alt set-cursor" (click)="openModal(addEditGroupModal, item)" title="Edit Group"></i>
                 </td>
                 <td>{{item?.name }}</td>
+                <td>{{item?.story_boards_count }}</td>
                 <td>
-                    <span class="iconn"><i class="fas fa-archive set-cursor" (click)="openModal(deleteGroupModal, item)" title="Delete Story Group"></i></span>
+                    <span class="iconn"><i class="fas fa-trash-alt set-cursor" (click)="openModal(deleteGroupModal, item)" title="Delete Story Group"></i></span>
                 </td>
             </tr>
         </tbody>
@@ -114,20 +115,20 @@
         <form [formGroup]="includeUsersForm" novalidate>
 
             <div class="used-selectbr repo-used-selectbr">
-                <p>Select Users To Include:</p>
+                <p>Select Stories: </p>
 
-                <ng-multiselect-dropdown [placeholder]="'Select Users'" [data]="groups" formControlName="story_ids" [settings]="dropdownSettings" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
+                <ng-multiselect-dropdown [placeholder]="'Select Stories'" [data]="groups" formControlName="story_ids" [settings]="dropdownSettings" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
                 </ng-multiselect-dropdown>
             </div>
 
             <div class="used-selectbr repo-used-selectbr">
-                <p>Select Users To Include:</p>
+                <p>Select Users: </p>
 
                 <ng-multiselect-dropdown [placeholder]="'Select Users'" [data]="usersList" formControlName="user_ids" [settings]="dropdownSettings" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
                 </ng-multiselect-dropdown>
             </div>
 
-            <div class="button-holder">
+            <div class="button-holder set-save-btn">
                 <button class="upload_btn" [ngClass]="{'disabled': includeUsersForm.invalid}" [disabled]="includeUsersForm.invalid" (click)="includeUsersEvent()">Save</button>
             </div>
         </form>
