--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,9 @@
 //timezone
 @import "node_modules/select2/src/scss/core";
 @import "~@ng-select/ng-select/themes/default.theme.css";
+// @import 'node_modules/angular-tree-component/dist/angular-tree-component.css';
+// @import 'node_modules/@syncfusion/ej2-base/styles/material.css';
+// @import 'node_modules/@syncfusion/ej2-angular-navigations/styles/material.css';
 .text-center {
     text-align: center;
 }
