--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -10,6 +10,23 @@
             <div class="row">
 
                 <div class="col-xs-12 col-sm-6">
+                    <label for="title" class="col-form-label">Title: </label>
+                    <div class="">
+                        <input type="text" formControlName="title" class="form-control" id="title">
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+                    <label for="description" class="col-form-label">Description: </label>
+                    <div class="">
+                        <textarea rows="6" formControlName="description" class="form-control" id="description" placeholder=""></textarea>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-xs-12 col-sm-6">
                     <label for="story_id" class="col-form-label">Select Group: </label>
                     <div class="">
 
@@ -19,26 +36,6 @@
 
                     </div>
                 </div>
-
-                <div class="col-xs-12 col-sm-6">
-                    <label for="title" class="col-form-label">Title: </label>
-                    <div class="">
-                        <input type="text" formControlName="title" class="form-control" id="title">
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-xs-12 col-sm-6">
-                    <label for="description" class="col-form-label">Description: </label>
-                    <div class="">
-                        <textarea rows="6" formControlName="description" class="form-control" id="description" placeholder=""></textarea>
-                    </div>
-                </div>
-
-
                 <div class="col-xs-12 col-sm-6">
                     <label for="tags" class="col-form-label">Select Tags: </label>
                     <div class="">
@@ -63,8 +60,8 @@
                         <textarea rows="6" formControlName="description" class="form-control" id="description" placeholder=""></textarea>
                     </div> -->
 
-                    <label for="file-upload" class="col-form-label">
-                        <i class="fas fa-paperclip paper set-cursor"></i> Attach Document(s):
+                    <label for="file-upload" class="col-form-label atch_doc">
+                        <span><i class="fas fa-paperclip paper set-cursor"></i></span> Attach Document(s):
                         </label>
                     <input #attachInput multiple type="file" accept=".jpg, .jpeg, .png, .xls, .xlsx, .pdf, .csv, .doc, .docx, .pptx, .ppt" class="upload-file-input" id="file-upload" (change)="handlerAttachFile()">
 
@@ -89,7 +86,7 @@
 
             </div>
 
-            <div class="form-group row margin-t20">
+            <div class="form-group row subcanc-btn">
                 <div class="col-12">
                     <button type="submit" [disabled]="storyBoardForm.invalid" class="btn btn-primary" (click)="submitForm()">Submit</button>
                     <a class="btn btn-secondary set-margin-left10" routerLink="/bid-academy/story-boards-list">Cancel</a>
