--- a/src/app/pages/bid-academy/components/story-board/story-board.component.scss
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.scss
@@ -36,3 +36,19 @@
     color: #fff;
     margin-right: 10px;
 }
+.group-tags-holder select {
+    cursor: pointer;
+}
+.group-tags-holder {
+    position: relative;
+    z-index: 0;
+}
+.group-tags-holder  .arrow-wrapper {
+    border-color: #999 transparent transparent;
+    border-style: solid;
+    border-width: 5px 5px 2.5px;
+    position: absolute;
+    right: 10px;
+    bottom: 12px;
+    z-index: 1;
+}
