--- a/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
+++ b/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
@@ -1,11 +1,16 @@
 <div class="card-header">
 
-    <h3>Story Boards List</h3>
+    
 
     <div class="row">
         <div class="col-sm-12">
-            <label for="role" class="col-form-label">&nbsp;</label>
-            <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/bid-academy/create-story-board']"><i class="fas fa-plus-square"></i>Create new Story Board</button>
+            <div class="stroy-list-head">
+                <h3>Story Boards List</h3>
+                <div class="buton-holder">
+                    <!-- <label for="role" class="col-form-label">&nbsp;</label> -->
+                    <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/bid-academy/create-story-board']"><i class="fas fa-plus-square"></i>Create new Story Board</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -14,9 +19,16 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th class="set-cursor" *ngFor="let item of tableHeadNames; let i=index">
+                <!-- <th class="set-cursor" *ngFor="let item of tableHeadNames; let i=index">
                     {{item}}
-                </th>
+                </th> -->
+               
+                <th class="set-cursor width10"> Edit </th>
+                <th class="set-cursor width20"> Title </th>
+                <th class="set-cursor width30"> Description </th>
+                <th class="set-cursor width20"> Tags </th>
+                <th class="set-cursor width10 text-center"> # Attach(s) </th>
+                <th class="set-cursor width10 text-center"> Action </th>
             </tr>
         </thead>
         <tbody>
@@ -27,14 +39,18 @@
                 <td>{{item?.title }}</td>
                 <td>{{item?.description}}</td>
                 <td>{{tagHandler(item?.tags)}}</td>
-                <td>{{item.story_board_assets.length}}</td>
-                <td>
+                <td class="text-center">{{item.story_board_assets.length}}</td>
+                <td class="text-center">
                     <span class="iconn"><i class="fas fa-trash-alt set-cursor" (click)="openModal(deleteBoardModal, item)" title="Delete Story Board"></i></span>
                 </td>
             </tr>
+            <tr>
+                <td colspan="4" class="transparent">
+                    <div *ngIf="storyBoardsList?.length === 0" class="no-data">No Data Found!</div>
+                </td>
+            </tr>
         </tbody>
-        <span *ngIf="storyBoardsList?.length === 0">No Data Found!</span>
-
+        
     </table>
 </div>
 
