--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,7 @@
 // @import 'node_modules/angular-tree-component/dist/angular-tree-component.css';
 // @import 'node_modules/@syncfusion/ej2-base/styles/material.css';
 // @import 'node_modules/@syncfusion/ej2-angular-navigations/styles/material.css';
+@import url('https://unpkg.com/angular-tree-component@7.0.1/dist/angular-tree-component.css');
 .text-center {
     text-align: center;
 }
