--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.scss
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.scss
@@ -25,9 +25,13 @@
 .width30 {
     width: 30%;
 }
+.width50 {
+    width: 50%;
+}
 .transparent {
     background: #fff;
     text-align: center;
+    border: none;
 }
 .no-data {
     min-height: 320px;
