--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -74,18 +74,19 @@
                     <span *ngIf="uploadedFiles.length>0" class="loading-fl">{{uploadedFiles.length}} File(s) Uploading...</span>
 
                     <ngx-spinner class="set-ngx-spinner" bdColor="rgba(255,255,255,0.8)" size="small" color="#d66166" type="ball-clip-rotate" fullScreen="false">
-                        <!-- <p style="color: white"> Loading... </p> -->
+                         <!-- <p style="color: white"> Loading... </p>  -->
                     </ngx-spinner>
 
                     <div *ngIf="attachFiles.length>0" class="attach-lm">
                         <ng-container *ngFor="let item of attachFiles; let i = index">
-                            <label class="pop-request-attach">
-                      <span class="fl-name">{{item.name}} - Uploaded</span>  
-                      <span class="pop-attach-ico">
-                        <i *ngIf="!spinLoadHandler(item.name)" (click)="deleteAssistanceFile(i, item)" class="far fa-window-close set-cursor cancel-color"></i> 
-                        <!-- <mat-spinner *ngIf="spinLoadHandler(item.name)" diameter="13" class="o-spin"></mat-spinner> -->
-                      </span>
-                    </label>
+                            <label class="pop-request-attach" style="position: relative;">
+                                <span class="fl-name">{{item.name}} - Uploaded</span>  
+                                <span class="pop-attach-ico">
+                                    <i *ngIf="!spinLoadHandler(item.name)" (click)="deleteAssistanceFile(i, item)" class="far fa-window-close set-cursor cancel-color"></i> 
+                                    <!-- <mat-spinner *ngIf="spinLoadHandler(item.name)" diameter="13" class="o-spin"></mat-spinner> -->
+                                </span>
+                                
+                            </label>
                         </ng-container>
                     </div>
                 </div>
