--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -14,12 +14,24 @@
     </div>
 </div>
 
-<div class="table-responsive padd>ing-bottom-250">
+<div class="table-responsive padding-bottom-250">
     <table class="table table-striped">
         <thead>
             <tr>
-                <th class="set-cursor" *ngFor="let item of tableHeadNames; let i=index">
+                <!-- <th class="set-cursor" *ngFor="let item of tableHeadNames; let i=index">
                     {{item}}
+                </th> -->
+                <th class="set-cursor width10">
+                    Edit
+                </th>
+                <th class="set-cursor width50">
+                    Name
+                </th>
+                <th class="set-cursor text-center width20">
+                    #Story Board(s)
+                </th>
+                <th class="set-cursor text-center width20">
+                    Action
                 </th>
             </tr>
         </thead>
@@ -29,8 +41,8 @@
                     <i class="fas fa-pencil-alt set-cursor" (click)="openModal(addEditGroupModal, item)" title="Edit Group"></i>
                 </td>
                 <td>{{item?.name }}</td>
-                <td>{{item?.story_boards_count }}</td>
-                <td>
+                <td class="text-center">{{item?.story_boards_count }}</td>
+                <td class="text-center">
                     <span class="iconn"><i class="fas fa-trash-alt set-cursor" (click)="openModal(deleteGroupModal, item)" title="Delete Story Group"></i></span>
                 </td>
             </tr>
