--- a/src/app/pages/bid-academy/components/group/group-users-list/group-users-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-users-list/group-users-list.component.html
@@ -3,12 +3,12 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="stroy-list-head">
-                <h3>Story Groups List</h3>
+                <h3>Story Group User(s) List</h3>
+
                 <div class="buton-holder">
-                    <!-- <label for="role" class="col-form-label">&nbsp;</label> -->
-                    <button type="button" class="create-user btn btn-primary float-right set-margin-left10" (click)="openModal(addEditGroupModal, undefined)"><i class="fas fa-plus-square"></i>Create new Story Group</button>
-                    <button type="button" class="create-user btn btn-primary float-right" (click)="openModal(includeUsers, undefined)"><i class="fas fa-plus-square"></i>Include Users</button>
+                    <a class="create-user btn btn-primary float-right"><i class="fas fa-plus-square"></i>Include Users</a>
                 </div>
+
             </div>
         </div>
     </div>
@@ -31,18 +31,17 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of groupUsers">
-                <td>{{item?.name }}</td>
-                <td class="text-center">{{item?.story_boards_count }}</td>
-                <td class="text-center">
-                    <!-- <span class="iconn"><i [ngClass]="{'fa-trash-alt' : !item.archive, 'fa-undo' : item.archive }" class="fas fa-trash-alt set-cursor" (click)="openModal(archiveGroupModal, item)" title="Delete Story Group"></i></span> -->
-                    <!-- <a class="iconn" [title]="item.story_users_count +  ' User(s)'" [routerLink]="['/bid-academy/story-group', item.id, 'users']"><i class="fas fa-users"></i></a> -->
+                <td>{{item.user.full_name }}
+                    <{{item.user.email}}>
                 </td>
-
-
+                <!-- <td class="text-center">{{item?.story_boards_count }}</td> -->
+                <td class="text-center">
+                    <span class="iconn"><i class="fas fa-trash-alt set-cursor" (click)="openModal(deleteGroupUsersModal, item)" title="Delete User"></i></span>
+                </td>
             </tr>
             <tr>
                 <td colspan="4" class="transparent">
-                    <div *ngIf="groups?.length === 0" class="no-data">No Data Found!</div>
+                    <div *ngIf="groupUsers?.length === 0" class="no-data text-center">No Data Found!</div>
                 </td>
             </tr>
         </tbody>
@@ -50,3 +49,22 @@
 
     </table>
 </div>
+
+<!-- Modal for Delete Story Group -->
+<ng-template #deleteGroupUsersModal>
+
+    <div class="modal-header">
+        <h4 class="modal-title">Confirm</h4>
+        <button type="button" class="close" (click)="bsModalRef.hide()" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+    </div>
+    <div class="modal-body"><label>Are you sure you want to Delete this User from this Story Group?</label></div>
+
+    <div class="row info">
+        <div class="col-xs-12 col-sm-12 text-left">
+            <button class="btn" (click)="bsModalRef.hide()">No</button>
+            <button class="btn btn-yes-margin33" (click)="deleteStoryUser()">Yes</button>
+        </div>
+    </div>
+</ng-template>
