--- a/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
+++ b/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
@@ -72,8 +72,8 @@
 
     <div class="row info">
         <div class="col-xs-12 col-sm-12 text-left">
-            <button class="btn" (click)="approveModal.hide()">No</button>
-            <button class="btn btn-yes-margin33" (click)="deleteBoardEvent()">Yes</button>
+            <button class="btn btn-secondary" (click)="approveModal.hide()">No</button>
+            <button class="btn btn-yes-margin33 btn-primary" (click)="deleteBoardEvent()">Yes</button>
         </div>
     </div>
 </ng-template>
