--- a/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.scss
+++ b/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.scss
@@ -1,3 +1,10 @@
+.card-header {
+    border: 1px solid #c0cadd;
+    border-bottom: none;
+}
+.table thead th {
+    border-bottom: 1px solid #c0cadd;
+}
 .stroy-list-head {
     display: flex;
     align-items: center;
