--- a/src/app/pages/bid-academy/components/group/group-users-list/group-users-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-users-list/group-users-list.component.html
@@ -6,7 +6,7 @@
                 <h3>Story Group User(s) List</h3>
 
                 <div class="buton-holder">
-                    <a class="create-user btn btn-primary float-right"><i class="fas fa-plus-square"></i>Include Users</a>
+                    <a class="create-user btn btn-primary float-right" [routerLink]="['/bid-academy/story-groups-list']"><i class="fas fa-external-link-alt"></i>Story Group List</a>
                 </div>
 
             </div>
