--- a/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
+++ b/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
@@ -1,6 +1,6 @@
 <div class="card-header">
 
-    
+
 
     <div class="row">
         <div class="col-sm-12">
@@ -22,7 +22,7 @@
                 <!-- <th class="set-cursor" *ngFor="let item of tableHeadNames; let i=index">
                     {{item}}
                 </th> -->
-               
+
                 <th class="set-cursor width10"> Edit </th>
                 <th class="set-cursor width20"> Title </th>
                 <th class="set-cursor width30"> Description </th>
@@ -50,7 +50,7 @@
                 </td>
             </tr>
         </tbody>
-        
+
     </table>
 </div>
 
@@ -68,7 +68,7 @@
                       <span aria-hidden="true">&times;</span>
                   </button>
     </div>
-    <div class="modal-body"><label>Are you sure you want to Delete this  - {{ selectedBoard.title }} ?</label></div>
+    <div class="modal-body"><label>Are you sure you want to Delete this Story Board ?</label></div>
 
     <div class="row info">
         <div class="col-xs-12 col-sm-12 text-left">
