--- a/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.scss
+++ b/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.scss
@@ -41,3 +41,12 @@
     font-size: 24px;
     font-weight: 600;
 }
+.review-tags {
+    display: inline-block;
+    background: #d66166;
+    margin: 2px 2px;
+    padding: 0px 3px 3px;
+    font-size: 13px;
+    color: #fff;
+    border-radius: 2px;
+}
