--- a/src/app/pages/companies/components/groups-list/groups-list.component.scss
+++ b/src/app/pages/companies/components/groups-list/groups-list.component.scss
@@ -17,3 +17,11 @@
     font-style: italic;
     font-weight: 700;
 }
+.create-user {
+    position: relative;
+    top: 2px;
+    display: inline-block;
+}
+.create-user i {
+    margin-right: 6px;
+}
