--- a/src/app/pages/users/components/request-upgrade/request-upgrade.component.html
+++ b/src/app/pages/users/components/request-upgrade/request-upgrade.component.html
@@ -1,4 +1,4 @@
 <div class="card-header">
   <h3>Upgrade requests</h3>
 </div>
-<ng2-smart-table class="table table-striped" [settings]="settings" [source]="usersService.getUpgradeList"></ng2-smart-table>
+<ng2-smart-table class="table table-striped req-table" style="margin: 0; border: none;" [settings]="settings" [source]="usersService.getUpgradeList"></ng2-smart-table>
