--- a/src/app/pages/users/components/signup-request-list/reqs-list.component.html
+++ b/src/app/pages/users/components/signup-request-list/reqs-list.component.html
@@ -1,4 +1,4 @@
 <div class="card-header">
   <h3>Sign-up requests list</h3>
 </div>
-<ng2-smart-table class="table table-striped" [settings]="settings" [source]="requestsList"></ng2-smart-table>
+<ng2-smart-table class="table table-striped req-table" style="margin: 0; border: none;" [settings]="settings" [source]="requestsList"></ng2-smart-table>
